@@ -1,5 +1,10 @@
 2003-11-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
+	* replace.pl.in: made it to delete the "auto" stanzas from the debian
+	  network config file. fixes bug #126930
+
+2003-11-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
 	* boot-conf.in: made it to mount the /boot partition before getting
 	  or setting the data. fixes bug #125199
 
